Hotfix: Problema con los botones idioma/brillo en celulares con modo oscuro arreglado.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover backdrop-filter backdrop-hue-rotate-60"
-	style="background-image:url('assets/img/aurora.jpg');"> 
+	style="background-image:url('assets/img/aurora.jpg');padding: 1px 1vh;"> 
 	<!-- Thanks to benjamin-suter from pexels bcs of this fantastic image 3617500 -->
 
 	<!-- top right corner buttons for night mode and lang / Botonera superior derecha de idioma y modo nocturno -->
