--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="Marfullsen, fullstack, dev, python, django">
 	<meta name="author" content="Marfullsen">
 	<link rel="shortcut icon" href="assets/img/icon/bookmark.png" type="image/x-icon">
-	<link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
 </head>
 
 <body class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover backdrop-filter backdrop-hue-rotate-60"
